--- a/notebooks/hackathon/Generate-Data.ipynb
+++ b/notebooks/hackathon/Generate-Data.ipynb
@@ -1059,7 +1059,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datascience",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1073,10 +1073,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.6"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
