--- a/notebooks/hackathon/Xgboost.ipynb
+++ b/notebooks/hackathon/Xgboost.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "7afc1e37-38ba-411f-b235-27c5f5f4b80b",
    "metadata": {},
    "outputs": [
@@ -92,11 +92,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: line 1: nvidia-smi: command not found\n"
+      "3\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(3)"
+   ]
   },
   {
    "cell_type": "code",
